# django-uv-knox-test

./: .dockerignore  .env.example  .env.local.example  .gitignore  Dockerfile  Dockerfile.alpine  Dockerfile.dev  Dockerfile.dev.optimized  Makefile  README.md  docker-compose.alpine.yml  docker-compose.debug.yml  docker-compose.fast.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
apps/accounts/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py
apps/core/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/core/management/commands/: debug_info.py
apps/core/migrations/: 0001_initial.py
config/: asgi.py  urls.py  wsgi.py
config/settings/: base.py  development.py  production.py  test.py
docker/nginx/: default.conf
docker/postgres/: init.sql
scripts/: dev.sh
